[package]
name = "rust-pw-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4", features = ["rustls"] }
actix-rt = "2"
tera = "1"
serde = "1"
thiserror = "1"
rust-argon2 = "1"
path-clean = "1"
uuid = { version = "1", features = [ "v4", "fast-rng", "serde" ] }
url = { version = "2", features = ["serde"] }
raise = "2"
exun = "0.1"
base64 = "0.21"
rust-ini = "0.18"
jwt = "0.16"
dotenv = "0.15"
hmac = "0.12"
parking_lot = "0.12"
grass = "0.12"
sha2 = "0.10"
unic-langid = { version = "0.9", features = ["serde"] }
rand = "0.8"
serde_urlencoded = "0.7"
sqlx = { version = "0.6", features = [ "runtime-actix-rustls", "mysql", "uuid", "chrono", "offline" ] }
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
